--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+    "@ngx-toolkit/logger": "^7.0.4",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "ng-multiselect-dropdown": "^0.2.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
